tests/error/private.gw
#! [contains] can't access private
class C { var private int i;  }

var C c;
<<< c.i >>>;
